--- a/苏鹏超的博客.md
+++ b/苏鹏超的博客.md
@@ -39,3 +39,5 @@
  18. [Android面试之HashMap ArrayMap SparseArray区别](http://www.toutiao.com/i6353881749709128194/) 
 
  19. [Android探索之流行框架对比篇](http://www.toutiao.com/i6356074286091862529/)
+
+ 20. [Android探索之MVVM的使用](http://www.toutiao.com/i6356388570940310018/)
